# Scribe

./: DocumentRoot.cmake
old_miniscribus/src/: ui_gmain.h  ui_pageformatdlg.h  ui_searchdlg.h
src/app/: CMakeLists.txt
src/lib/api/: CMakeLists.txt  FoColorName.cpp  FoColorName.h  api.pro  basic_config.cpp  basic_config.h  configxslproc.txt  dzip.cpp  dzip.h  getfiles.cpp  getfiles.h  key.odt  kzip.cpp  kzip.h  main.cpp  prometti.gen.txt  qt4config.h  qt5config.h  scribe_config.h  xslt_convert.cpp  xslt_convert.h
src/lib/api/not_qt5enable/: PageFormatGroup.cpp  PageFormatGroup.h  SessionManager.cpp  SessionManager.h
src/lib/api/page/: Image_Page_Struct_Mime.cpp  Image_Page_Struct_Mime.h  OOFormat.cpp  OOFormat.h  OOReader.cpp  OOReader.h
src/lib/oldtimer/: Tools_Basic.h
